# ai-file-search

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: cli_tests.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  path_id.rs
crates/core/tests/: path_id_tests.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  main.rs  service.rs
crates/daemon/tests/: handler_tests.rs  service_cli_tests.rs  service_state_tests.rs  transport_tests.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs  scanner.rs  store.rs
crates/indexer/tests/: file_store_tests.rs  refresh_summary_tests.rs  scanner_tests.rs  store_tests.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/protocol/tests/: protocol_tests.rs
docs/superpowers/plans/: 2026-06-18-bench-cli-mvp.md  2026-06-18-cli-prototype-mvp.md  2026-06-18-file-index-store-mvp.md  2026-06-18-fixture-cli-mvp.md  2026-06-18-index-store-mvp.md  2026-06-18-persistent-cli-mvp.md  2026-06-18-readme-usage-mvp.md  2026-06-18-scanner-mvp.md  2026-06-20-lightweight-index-metadata-mvp.md  2026-06-20-refresh-index-cli-mvp.md  2026-06-20-refresh-summary-mvp.md  2026-06-21-status-cli-mvp.md  2026-06-23-exclude-name-cli.md  2026-06-23-ipc-json-rpc-daemon-mvp.md  2026-06-23-query-json-output.md  2026-06-23-status-stats-json-output.md  2026-06-24-background-service-mvp.md  2026-06-24-ipc-transport-mvp.md  2026-07-10-index-status-json-rpc.md  2026-07-10-service-auto-refresh.md
docs/superpowers/specs/: 2026-06-24-background-service-mvp-design.md  2026-07-10-index-status-json-rpc-design.md  2026-07-10-service-auto-refresh-design.md
