[workspace]
members = [
    "crates/core",
    "crates/indexer",
    "crates/cli",
    "crates/protocol",
    "crates/daemon"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/your-org/ai-file-search"
rust-version = "1.96"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
