[package]
name = "ai-file-search-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ai-file-search-core = { path = "../core" }
ai-file-search-indexer = { path = "../indexer" }
ai-file-search-protocol = { path = "../protocol" }
serde_json = "1"
